--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prodigi-cube-style-loader",
   "version": "0.0.1",
   "description": "Webpack style loader for prodigi3",
+  "main": "index.js",
   "engines": {
     "node": ">=6.5",
     "npm": ">=3.10",
