--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "not ie < 9"
   ],
   "dependencies": {
-    "react": "16.1.1",
-    "react-dom": "16.1.1",
-    "prop-types": "15.6.0",
+    "hoist-non-react-statics": "2.3.1",
     "loader-utils": "^1.1.0",
-    "hoist-non-react-statics": "2.3.1"
+    "prop-types": "15.6.0",
+    "react": "16.1.1",
+    "react-dom": "16.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^4.1.1",
